# frs

./: Cargo.toml  dockerfile
migrations/2021-03-19-095325_create_posts/: up.sql
scripts/: build.sh  start.sh
src/: db.rs  lib.rs  logic.rs  main.rs  routing.rs  schema.rs
src/logic/: process_users_get.rs  process_users_post.rs
src/routing/: users_get.rs  users_post.rs
