[package]
authors = ["mijinko17 <kougouseikeidansi@gmail.com>"]
edition = "2018"
name = "face-reader-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.0", features = ["sqlite"]}
dotenv = "0.15.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.64"
tokio = {version = "1", features = ["full"]}
warp = "0.3"
